[gd_scene load_steps=4 format=2]

[ext_resource path="res://map/exit_area/exit_area.gd" type="Script" id=1]

[sub_resource type="CylinderMesh" id=1]
top_radius = 15.0
bottom_radius = 15.0
height = 25.0

[sub_resource type="CylinderShape" id=5]
height = 25.0
radius = 15.0

[node name="exit_area" type="Area"]
collision_layer = 0
monitorable = false
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 1 )
software_skinning_transform_normals = false

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 5 )

[connection signal="body_entered" from="." to="." method="_on_exit_area_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_exit_area_body_exited"]
